@@ -1,0 +1,25 @@
+<?php
+
+/**
+* Smarty method disableCompileCheck
+* 
+* Disable compile checking
+* 
+* @package Smarty
+* @subpackage SmartyMethod
+* @author Uwe Tews 
+*/
+
+/**
+* Smarty class disableCompileCheck
+* 
+* Disable compile checking
+*/
+class Smarty_Method_DisableCompileCheck extends Smarty_Internal_Base {
+    public function execute()
+    {
+        return $this->smarty->compile_check = false;
+    } 
+} 
+
+?>
